lang-server/src/snapshots/lang_server__tokens__test__overlapping.snap
---
source: lang-server/src/tokens.rs
expression: "lsp.tokens(TextDocumentIdentifier::new(uri))"
---
[
    SemanticToken {
        delta_line: 0,
        delta_start: 0,
        length: 3,
        token_type: 3,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 4,
        length: 4,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 2,
        token_type: 1,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 1,
        length: 17,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 13,
        token_type: 1,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 14,
        length: 1,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 1,
        length: 9,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 2,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 0,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 0,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 0,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 8,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 6,
        token_type: 1,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 1,
        delta_start: 1,
        length: 16,
        token_type: 4,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 1,
        token_type: 5,
        token_modifiers_bitset: 0,
    },
    SemanticToken {
        delta_line: 0,
        delta_start: 2,
        length: 12,
        token_type: 1,
        token_modifiers_bitset: 0,
    },
]
